public/fr/assets/css/ap-style.css
/* Copyright © 2019 Anthony PILLOT */

#profile-picture {
    width: 60%;

    border-width: 2px;
    border-style: solid;
    border-color: white;
    padding: 1%;
}

#cv-picture-pdf {
    width: 50%;

    margin-right: 30%;

    border-width: 1px;
    border-style: solid;
    border-color: white;
    padding: 4px;
}

#section-profile-picture {
    padding-top: 10%;
}

#container-footer {
    background-color: rgba(68, 26, 26, 0.7);
    padding: 15px;
}

#google-maps {
    border-width: 2px;
    border-style: solid;
    border-color: white;
    padding: 2px;
    opacity: 0.9;
}

.section-logo-xp {
    padding-top: 20px;
}

.section-logo-xp img {
    width: 170px;
    height: 170px;
}

.container-google-maps {
    background-color: rgba(245, 245, 245, 0.1);
    margin-top: 15px;
    padding-top: 12px;
    padding-bottom: 10px;
}

figure.isotope-figure {
    height: 250px;
    width: 600px;
}

.menu {
    background-color: rgba(85, 33, 33, 0.90);
}

.isotope-content {
    padding: 5%;
}

/* NB : bms like Business Management Solution */
.blue-bms-color {
    color: #54c0eb
}

/* NB : ss like Scheduled-Shutdown */
.blue-ss-color {
    color: #b5d7f2;
}

/* Node.js logo's color */
.green-node {
    color: #689f63;
}

.padding-2-percent-r {
    padding-right: 2%;
}

.padding-1-percent-r {
    padding-right: 1%;
}

.padding-5-pixel-lr {
    padding-left: 5px;
    padding-right: 5px;
}

.isotope-image-format {
    display: block;
    margin-left: auto;
    margin-right: auto;

    background-color: rgba(255, 255, 255, 0.1);
    padding: 15px;
    border-radius: 4px;

    width: auto;
    /*TODO vérifier la valeur*/
    height: 60%;
}

.section-footer {
    color: #fff;
    width: 55%;
    right: 10%;
    left: 35%;
    position: relative;
    border-top: 3px solid rgba(250, 250, 250, 0.25);
}

.line-dec {
    width: 60px;
    height: 3px;
    background-color: #a43f49;
    margin: 10px auto;
}

.right-image {
    width: 135%;
}

.right-image-pdf {
    width: 150%;
    margin-right: 200px;
}

code {
    color: #ff515b;
}

h2 {
    font-size: 32px;
    font-weight: 700;
    color: #fff;
}

/* Match with the iPhone 11/XR resolution */
@media screen and (max-width: 414px) {
    #cv-picture-pdf {
        width: 80%;
        padding: 2px;
        margin-top: 20%;
        margin-right: auto;
    }

    .menu .social-network {
        margin-top: 25px;
    }

    .menu .copyright-text {
        position: relative;
        margin-top: 20px;
    }

    .menu .copyright-text p {
        border-top: 1px solid rgba(250, 250, 250, 0.1);
        display: inline-block;
        width: 100%;
        padding-left: 30px;
        padding-right: 30px;
        padding-top: 5px;
        font-size: 13px;
    }

    .right-image {
        width: 100%;
        margin-left: 0;
    }

    .right-image-pdf {
        width: 100%;
    }

    .container-google-maps {
        visibility: hidden;
    }

    .section-footer {
        text-align: center;
        color: #fff;
        width: 100%;
        right: 100%;
        left: 1%;
        position: relative;
        border-top: 3px solid rgba(250, 250, 250, 0.25);
    }

    figure.isotope-figure {
        width: 100%;
    }

    @media (min-width: 414px) {
        .jumbotron {
            padding: 4rem 2rem
        }
    }
}

